fixed title alignment

--- a/css/Style.css
+++ b/css/Style.css
@@ -62,15 +62,6 @@ a:active {
     color: #BF788B;
 }
 
-.intro-section {
-    height: 100%;
-    padding-top: 200px;
-    font-weight: 300;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-}
-
 .posts-section {
     font-family: 'Lato', sans-serif;
     height: 100%;
@@ -84,11 +75,6 @@ a:active {
     margin-right: -50px;
     float: right;
     color: #d94e4e;
-}
-
-#top {
-    padding-top: 100px;
-    width: 100%;
 }
 
 @media (max-width: 500px) {
@@ -182,6 +168,9 @@ a:active {
     color: #3d3c40;
     display: none;
 }
+.fa-heart-o{
+    color:#d94e4e;
+}
 
 #post {
     border: 2px solid;
@@ -267,7 +256,4 @@ h1 {
     font-size: 0.8em;
     font-style: italic;
     color: #C2C2C2;
-}
-.fa-heart-o{
-    color:#d94e4e;
 }
